# terminus-math

./: CMakeLists.txt  conanfile.py
cmake/scripts/: Find_Dependencies.cmake
include/terminus/coordinate/: Datum.hpp
include/terminus/coordinate/conversions/vw/: Lon_Lat_Rad_To_XYZ_Estimate_Functor.hpp  Point_Transformations.hpp  XYZ_to_Lon_Lat_Rad_Estimate_Functor.hpp
include/terminus/math/: Fundamental_Types.hpp  Matrix.hpp  MatrixN.hpp  Matrix_Operations.hpp  Point.hpp  Point_Utilities.hpp  Quaternion.hpp  Rectangle.hpp  Size.hpp  Vector.hpp  VectorN.hpp  Vector_Utilities.hpp  matrix.hpp  vector.hpp
include/terminus/math/geometry/: LIne_Functions.hpp
include/terminus/math/linalg/: Solvers.hpp
include/terminus/math/matrix/: Indexing_Matrix_Iterator.hpp  Matrix.hpp  MatrixN.hpp  Matrix_Base.hpp  Matrix_Col.hpp  Matrix_Col_Iterator.hpp  Matrix_Functors.hpp  Matrix_Matrix_Product.hpp  Matrix_Operations.hpp  Matrix_Proxy.hpp  Matrix_Row.hpp  Matrix_Traits.hpp  Matrix_Transpose.hpp  Matrix_Vector_Product.hpp  Sub_Matrix.hpp
include/terminus/math/optimization/: Least_Squares_Model_Base.hpp  Levenburg_Marquardt.hpp
include/terminus/math/types/: Functors.hpp  Fundamental_Types.hpp  Math_Functors.hpp
include/terminus/math/vector/: Vector.hpp  VectorN.hpp  Vector_Base.hpp  Vector_Functors.hpp  Vector_Traits.hpp  Vector_Utilities.hpp
src/: CMakeLists.txt  Quaternion.cpp  Quaternion_Utilities.cpp
src/coordinate/: Datum.cpp
src/math/: Quaternion.cpp
src/math/linalg/: Solvers.cpp
test/unit/: CMakeLists.txt  TEST_Matrix.cpp  TEST_MatrixN.cpp  TEST_Point.cpp  TEST_Quaternion.cpp  TEST_Rectangle.cpp  TEST_Size.cpp  TEST_Vector.cpp  TEST_VectorN.cpp  TEST_Vector_Utilities.cpp
test/unit/coordinate/vw/: TEST_Point_Transformations.cpp
test/unit/math/matrix/: TEST_Matrix.cpp
test/unit/math/optimization/: TEST_Levenburg_Marquardt.cpp
test/unit/matrix/: TEST_Matrix.cpp  TEST_Matrix_Multiplication.cpp  TEST_Matrix_Operations.cpp  TEST_Matrix_Transpose.cpp
